--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,5 @@
+websocket:
+  origenspermitidas: http://localhost:4200,http://ec2-54-86-78-167.compute-1.amazonaws.com:8081,http://localhost:8080,http://3.88.9.100:8080
+
 server:
   port: 8090
-
-origenspermitidas: http://localhost:4200,http://ec2-54-86-78-167.compute-1.amazonaws.com:8081,http://localhost:8080,http://3.88.9.100:8080/
-
-com: 
-  kb: 
-    jwt: 
-      aws: 
-        userPoolId: "us-east-1_0sVdlrSMk" 
-        region: "us-east-1"
